spade-tests/src/snapshots/spade_tests__parser__missing_pipeline_depth_error_with_variable.snap
---
source: spade-tests/src/parser.rs
---
entity a() -> bool {
    let abc = 2;
    inst(abc) x()
}


error: expected pipeline depth, got `identifier`
  ┌─ testinput:3:10
  │
3 │     inst(abc) x()
  │          ^^^ expected pipeline depth here
  │
  = help: pipeline depth can only be integer constant
